--- a/application-1/bdd/mariadb/my.cnf
+++ b/application-1/bdd/mariadb/my.cnf
@@ -104,6 +104,9 @@ skip-external-locking
 # localhost which is more compatible and is not less secure.
 # bind-address = 127.0.0.1
 # bind-address = VALEUR_ADRESSE_IP_SRV_JEE
+# l'adresse IP n'est pas à customiser, parce que mariadb est 
+# utilisée dans un conteneur docker. LE binding d'adresses IP
+# se fait éventuellement au niveau du conteneur. 
 bind-address = 0.0.0.0
 #
 # * Fine Tuning
